--- a/recommendation_system.ipynb
+++ b/recommendation_system.ipynb
@@ -9,16 +9,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b494ed35-6e48-4bbe-9cfc-690a374e2aef",
-   "metadata": {},
-   "source": [
-    "### TODO: DEMO.MD"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "e9ea2e78-9db5-4b04-9334-70072ace11fd",
    "metadata": {},
    "outputs": [
@@ -56,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "855bdfef-07af-4741-9ff8-7ebc93bf2743",
    "metadata": {},
    "outputs": [],
@@ -66,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "9d782885-1050-45da-b8da-7b2e37e637af",
    "metadata": {},
    "outputs": [
@@ -134,7 +126,7 @@
        "4              12 Angry Men  Life Is In Their Hands -- Death Is On Their Mi..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,176 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "ae7e3290-b829-487a-b228-62ddc827f215",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['text'] = df['name'] + \" \" + df['tagline']\n",
     "#ignore \"unexpected error\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "a51c3e23-a5ea-4ab7-bd39-4ad5b2ed8761",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>tagline</th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>The Shawshank Redemption</td>\n",
-       "      <td>Fear can hold you prisoner. Hope can set you f...</td>\n",
-       "      <td>The Shawshank Redemption Fear can hold you pri...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>The Godfather</td>\n",
-       "      <td>An offer you can't refuse.</td>\n",
-       "      <td>The Godfather An offer you can't refuse.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>The Dark Knight</td>\n",
-       "      <td>Why So Serious?</td>\n",
-       "      <td>The Dark Knight Why So Serious?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>The Godfather Part II</td>\n",
-       "      <td>All the power on earth can't change destiny.</td>\n",
-       "      <td>The Godfather Part II All the power on earth c...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12 Angry Men</td>\n",
-       "      <td>Life Is In Their Hands -- Death Is On Their Mi...</td>\n",
-       "      <td>12 Angry Men Life Is In Their Hands -- Death I...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>245</th>\n",
-       "      <td>The Help</td>\n",
-       "      <td>Change begins with a whisper.</td>\n",
-       "      <td>The Help Change begins with a whisper.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>246</th>\n",
-       "      <td>Dersu Uzala</td>\n",
-       "      <td>There is man and beast at nature's mercy. Ther...</td>\n",
-       "      <td>Dersu Uzala There is man and beast at nature's...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>247</th>\n",
-       "      <td>Aladdin</td>\n",
-       "      <td>Wish granted! (DVD re-release)</td>\n",
-       "      <td>Aladdin Wish granted! (DVD re-release)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>248</th>\n",
-       "      <td>Gandhi</td>\n",
-       "      <td>His Triumph Changed The World Forever.</td>\n",
-       "      <td>Gandhi His Triumph Changed The World Forever.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>249</th>\n",
-       "      <td>Dances with Wolves</td>\n",
-       "      <td>Inside everyone is a frontier waiting to be di...</td>\n",
-       "      <td>Dances with Wolves Inside everyone is a fronti...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>250 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         name  \\\n",
-       "0    The Shawshank Redemption   \n",
-       "1               The Godfather   \n",
-       "2             The Dark Knight   \n",
-       "3       The Godfather Part II   \n",
-       "4                12 Angry Men   \n",
-       "..                        ...   \n",
-       "245                  The Help   \n",
-       "246               Dersu Uzala   \n",
-       "247                   Aladdin   \n",
-       "248                    Gandhi   \n",
-       "249        Dances with Wolves   \n",
-       "\n",
-       "                                               tagline  \\\n",
-       "0    Fear can hold you prisoner. Hope can set you f...   \n",
-       "1                           An offer you can't refuse.   \n",
-       "2                                      Why So Serious?   \n",
-       "3         All the power on earth can't change destiny.   \n",
-       "4    Life Is In Their Hands -- Death Is On Their Mi...   \n",
-       "..                                                 ...   \n",
-       "245                      Change begins with a whisper.   \n",
-       "246  There is man and beast at nature's mercy. Ther...   \n",
-       "247                     Wish granted! (DVD re-release)   \n",
-       "248             His Triumph Changed The World Forever.   \n",
-       "249  Inside everyone is a frontier waiting to be di...   \n",
-       "\n",
-       "                                                  text  \n",
-       "0    The Shawshank Redemption Fear can hold you pri...  \n",
-       "1             The Godfather An offer you can't refuse.  \n",
-       "2                      The Dark Knight Why So Serious?  \n",
-       "3    The Godfather Part II All the power on earth c...  \n",
-       "4    12 Angry Men Life Is In Their Hands -- Death I...  \n",
-       "..                                                 ...  \n",
-       "245             The Help Change begins with a whisper.  \n",
-       "246  Dersu Uzala There is man and beast at nature's...  \n",
-       "247             Aladdin Wish granted! (DVD re-release)  \n",
-       "248      Gandhi His Triumph Changed The World Forever.  \n",
-       "249  Dances with Wolves Inside everyone is a fronti...  \n",
-       "\n",
-       "[250 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -338,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "f816bf03-9bd3-4b9c-a6ba-1dbd00d117e3",
    "metadata": {},
    "outputs": [],
@@ -357,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "54f59cc9-6edd-40b0-801a-8460bc1e4075",
    "metadata": {},
    "outputs": [],
@@ -379,21 +209,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "895c0ced-63ea-4113-a305-4512535f4126",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Alien', 0.343),\n",
-       " ('How to Train Your Dragon', 0.245),\n",
-       " ('2001: A Space Odyssey', 0.23),\n",
-       " ('Children of Heaven', 0.225),\n",
-       " ('Lawrence of Arabia', 0.224)]"
+       "[('The Exorcist', 0.324),\n",
+       " ('Alien', 0.312),\n",
+       " ('2001: A Space Odyssey', 0.209),\n",
+       " ('Finding Nemo', 0.2),\n",
+       " ('The Apartment', 0.142)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +231,7 @@
    "source": [
     "#Example usage\n",
     "#`user_text` represents the input description - change according to recommendation preferences\n",
-    "user_text = \"A thrilling space adventure with humor\"\n",
+    "user_text = \"Fun thrilling space movie\"\n",
     "recommend_movies(user_text)"
    ]
   },
