--- a/recommendation_system.ipynb
+++ b/recommendation_system.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "e9ea2e78-9db5-4b04-9334-70072ace11fd",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,8 @@
     "import pandas as pd\n",
     "!pip install scikit-learn\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.metrics.pairwise import cosine_similarity"
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
    ]
   },
   {
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "855bdfef-07af-4741-9ff8-7ebc93bf2743",
    "metadata": {},
    "outputs": [],
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "9d782885-1050-45da-b8da-7b2e37e637af",
    "metadata": {},
    "outputs": [
@@ -126,7 +127,7 @@
        "4              12 Angry Men  Life Is In Their Hands -- Death Is On Their Mi..."
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,13 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "ae7e3290-b829-487a-b228-62ddc827f215",
    "metadata": {},
    "outputs": [],
    "source": [
     "df['text'] = df['name'] + \" \" + df['tagline']\n",
-    "#ignore \"unexpected error\""
+    "#ignore \"unexpected error\" if it appears"
    ]
   },
   {
@@ -168,12 +169,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "f816bf03-9bd3-4b9c-a6ba-1dbd00d117e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectorizer = TfidfVectorizer(stop_words='english')\n",
+    "vectorizer = TfidfVectorizer(stop_words='english', lowercase=True) #focus on meaningful words and ensure consistency\n",
     "tfidf_matrix = vectorizer.fit_transform(df['text'])"
    ]
   },
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "54f59cc9-6edd-40b0-801a-8460bc1e4075",
    "metadata": {},
    "outputs": [],
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "895c0ced-63ea-4113-a305-4512535f4126",
    "metadata": {},
    "outputs": [
@@ -223,7 +224,7 @@
        " ('The Apartment', 0.142)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
